# WSF-Demos

./: .JuliaFormatter.toml  .eslintrc.json  .gitignore  Fractals.py  Light_clock.html  Manifest.toml  Project.toml  README.md  Spaceship_clock.html  WebServer.py  adaptive_optics.html  application.py  binary_stars.html  index.md  miniphylogeny.html  mutation_resistant_genetic_code.html  package-lock.json  package.json  phylogeny.html  pyproject.toml  requirements.txt  wsgi.py
.ebextensions/: https-instance-securitygroup.config
.githooks/: pre-commit
Beamer test/: qm_beamer.tex
Phylogeny/: Chordata_Cut.csv  minichordata_order.json  miniphylogeny.html
Problems+exercises/: qm_problems.adoc  qm_problems.html
QM Course Materials/Animations/: custom_config.yml  eqn.py
QM Course Materials/Asciidoctor-test-qm/: adoc-test.adoc  adoc-test.html  bg-qm-visuals.adoc  bg-qm-visuals.html  bg-slides.adoc  bg-slides.html  docinfo-revealjs.html  gulpfile.js  harmonicoscillator-test.adoc  harmonicoscillator-test.html  harmonicoscillator.adoc  harmonicoscillator.html  package-lock.json  package.json  test.adoc  test.html  theme.css
QM Course Materials/Manim Animations/: Manifest.toml  Project.toml  anim.jl  custom_config.yml  eqn.py  square_wave.py  test.py
QM Course Materials/Manim Animations/quantum-test/: qm.py  timings.numbers
QM Course Materials/Problems+exercises/: chap-1.adoc  chap-1.html  chap-2.adoc  chap-2.html  chap-3.adoc  chap-3.html  chap-4.adoc  chap-4.html  chap-5.adoc  chap-5.html  chap-6.adoc  chap-6.html  docinfo.html  griffiths.adoc  griffiths.html  jared.adoc  jared.html  qm_problems.adoc  qm_problems.html  shared_attributes.adoc  shared_attributes.html
QM Course Materials/Problems+exercises/Quantum Antora/: antora-playbook.yml  package-lock.json  package.json
QM Course Materials/Problems+exercises/Workspace/: harmonic_oscillator.jl
QM Course Materials/Problems+exercises/archive/: chap-1.adoc  (+14 more)
RB/: environment.yml  jsconfig.json  package.json
RB/src/: create_demo_listing_html.py  inline_html.py  inline_js.py
(+511 files in other folders)
