[tool.poetry]
name = "wsf-demos"
version = "0.1.0"
description = ""
authors = ["Robert Bennett <rltbennett@icloud.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.2.2"
numpy = "^1.20.1"
scipy = "^1.6.1"
beautifulsoup4 = "^4.9.3"
html5lib = "^1.1"
lxml = "^4.6.2"
sympy = "^1.7.1"
matplotlib = "^3.3.4"
opencv-python = "^4.5.1"
requests = "^2.25.1"

[tool.poetry.dev-dependencies]
ipython = "^7.21.0"
ipykernel = "^5.5.0"
jupyter = "^1.0.0"
black = "^20.8b1"
mypy = "^0.812"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
